--- a/17_style-layer/mimic.css
+++ b/17_style-layer/mimic.css
@@ -1,3 +1,11 @@
+/*
+CAD - Caden, Aditya, Danny
+SoftDev
+K17 - Style-layer - Exploring CSS
+2024 - 10 - 16
+time: 1 hr
+*/
+
 body {
     background-color:dimgray; 
     font-family:Arial, Helvetica, sans-serif;
