--- a/18_live_stuyle/templates/index.html
+++ b/18_live_stuyle/templates/index.html
@@ -9,7 +9,7 @@ time: 1 hr
 <html lang="en">
   <head>
     <title>CAD</title>
-    <link rel="stylesheet" href="mimic.css">
+    <link rel="stylesheet" href="../static/style.css">
   </head>
   <body>
       <h1> h1 foo</h1>
@@ -33,6 +33,5 @@ time: 1 hr
           Tri-tip andouille bacon swine drumstick sausage, venison hamburger short ribs. Corned beef pork rump spare ribs. Prosciutto pancetta fatback meatloaf buffalo chislic cupim, tri-tip bresaola pork loin. Pork chop turducken ham doner corned beef turkey. Ribeye chislic filet mignon tenderloin cow. Landjaeger capicola flank beef, filet mignon pork beef ribs.
         </p>
       </div>
-
   </body>
 </html>
