--- a/k35/app/templates/register.html
+++ b/k35/app/templates/register.html
@@ -1,39 +1,27 @@
-{% extends "base.html" %}
-{% block title %}Register{% endblock %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Register</title>
+</head>
+<body>
     <h2>Register</h2>
     <form method="POST">
-        {{ form.hidden_tag() }}
         <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}<br>
-            {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            <label for="username">Username</label><br>
+            <input type="text" name="username" required>
         </p>
         <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=32) }}<br>
-            {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            <label for="email">Email</label><br>
+            <input type="email" name="email" required>
         </p>
         <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            <label for="password">Password</label><br>
+            <input type="password" name="password" required>
         </p>
         <p>
-            {{ form.confirm_password.label }}<br>
-            {{ form.confirm_password(size=32) }}<br>
-            {% for error in form.confirm_password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.submit() }}
+            <button type="submit">Register</button>
         </p>
     </form>
-{% endblock %}
+</body>
+</html>
