--- a/k35/app/templates/login.html
+++ b/k35/app/templates/login.html
@@ -1,28 +1,23 @@
-{% extends "base.html" %}
-{% block title %}Login{% endblock %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+</head>
+<body>
     <h2>Login</h2>
     <form method="POST">
-        {{ form.hidden_tag() }}
         <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=32) }}<br>
-            {% for error in form.email.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            <label for="email">Email</label><br>
+            <input type="email" name="email" required>
         </p>
         <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=32) }}<br>
-            {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
+            <label for="password">Password</label><br>
+            <input type="password" name="password" required>
         </p>
         <p>
-            {{ form.remember() }}{{ form.remember.label }}
-        </p>
-        <p>
-            {{ form.submit() }}
+            <button type="submit">Login</button>
         </p>
     </form>
-{% endblock %}
+</body>
+</html>
