--- a/k35/app/templates/base.html
+++ b/k35/app/templates/base.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <nav>
-        <!-- Navigation links -->
+        <ul>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            <li><a href="{{ url_for('new_post') }}">New Post</a></li>
+        </ul>
     </nav>
     <div class="container">
         {% with messages = get_flashed_messages(with_categories=true) %}
