--- a/k35/app/templates/register.html
+++ b/k35/app/templates/register.html
@@ -23,5 +23,11 @@
             <button type="submit">Register</button>
         </p>
     </form>
+    <nav>
+        <ul>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
