--- a/k35/app/templates/login.html
+++ b/k35/app/templates/login.html
@@ -19,5 +19,11 @@
             <button type="submit">Login</button>
         </p>
     </form>
+    <nav>
+        <ul>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
